UAT_AllStar_8Jan2024_0636/Backup-Source/objects/cus_ord_trend_dates_info__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SAP_Created_DateTime__c</fullName>
        <label>SAP Created DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_DateTime__c</fullName>
        <label>GCP Update DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_DateTime__c</fullName>
        <label>Vision Updated DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Order Trend Dates Info</label>
</CustomObject>